--- a/VMF UK Agids.ipynb
+++ b/VMF UK Agids.ipynb
@@ -21,7 +21,13 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%%sql\n",
+    "SELECT timestamp, latency\n",
+    "FROM []\n",
+    "ORDER BY latency DESC\n",
+    "LIMIT 10"
+   ]
   }
  ],
  "metadata": {
