--- a/VMF UK Agids.ipynb
+++ b/VMF UK Agids.ipynb
@@ -16,18 +16,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "accessDenied: Access Denied: Table salestool-prod:datastore.Business: The user vbizops@appspot.gserviceaccount.com does not have permission to query a table in dataset salestool-prod:datastore\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT\n",
+    "  name,\n",
+    "  city,\n",
+    "  state,\n",
+    "  address,\n",
+    "  zip_code,\n",
+    "  country,\n",
+    "  website,\n",
+    "  contact_first_name,\n",
+    "  contact_last_name,\n",
+    "  contact_email,\n",
+    "  GROUP_CONCAT(phone_numbers) as phone_numbers,\n",
+    "FROM [salestool-prod:datastore.Business]\n",
+    "WHERE pid = \"VMF\"\n",
+    "  AND market_id = 'uk'\n",
+    "GROUP BY\n",
+    "  name,\n",
+    "  city,\n",
+    "  state,\n",
+    "  address,\n",
+    "  zip_code,\n",
+    "  country,\n",
+    "  website,\n",
+    "  contact_first_name,\n",
+    "  contact_last_name,\n",
+    "  contact_email,"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SELECT timestamp, latency\n",
-    "FROM []\n",
-    "ORDER BY latency DESC\n",
-    "LIMIT 10"
-   ]
+   "source": []
   }
  ],
  "metadata": {
