--- a/Vendasta Analytics Workshop/2016-05-26/Examples.ipynb
+++ b/Vendasta Analytics Workshop/2016-05-26/Examples.ipynb
@@ -1,22 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Examples"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Examples\n",
-    "\n",
-    "\n",
-    "## Salespeople\n",
+    "## Salespeople"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Select All Salespeople"
    ]
   },
@@ -27,7 +28,13 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%%sql\n",
+    "SELECT *\n",
+    "FROM [salestool-prod:datastore.logs_20140615]\n",
+    "ORDER BY latency DESC\n",
+    "LIMIT 10"
+   ]
   }
  ],
  "metadata": {
