--- a/Vendasta Analytics Workshop/2016-05-26/Examples.ipynb
+++ b/Vendasta Analytics Workshop/2016-05-26/Examples.ipynb
@@ -30,10 +30,8 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "SELECT *\n",
-    "FROM [salestool-prod:datastore.logs_20140615]\n",
-    "ORDER BY latency DESC\n",
-    "LIMIT 10"
+    "SELECT \n",
+    "FROM [salestool-prod:datastore.SalesPerson]\n"
    ]
   }
  ],
