--- a/Vendasta Analytics Workshop/2016-05-26/Examples.ipynb
+++ b/Vendasta Analytics Workshop/2016-05-26/Examples.ipynb
@@ -30,8 +30,28 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "SELECT \n",
+    "SELECT email, first_name, last_name, pid\n",
     "FROM [salestool-prod:datastore.SalesPerson]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Select All "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "SELECT email, first_name, last_name, pid\n",
+    "FROM [salestool-prod:datastore.SalesPerson]"
    ]
   }
  ],
