--- a/Vendasta Analytics Workshop/2016-05-26/Examples.ipynb
+++ b/Vendasta Analytics Workshop/2016-05-26/Examples.ipynb
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Select VMF Salespeople "
+    "### WHERE pid = 'VMF'"
    ]
   },
   {
@@ -118,20 +118,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ORDER BY last_name"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div class=\"bqtv\" id=\"4_146423277152\"><table><tr><th>email</th><th>first_name</th><th>last_name</th><th>pid</th></tr><tr><td>sabe@vendasta.com</td><td>Seyi</td><td>Abe</td><td>VMF</td></tr><tr><td>sabe+vmf@vendasta.com</td><td>Seyi</td><td>Abe (inbound)</td><td>VMF</td></tr><tr><td>sabeywickrama@vendasta.com</td><td>Shakya</td><td>Abeywickrama</td><td>VMF</td></tr><tr><td>BAnton@Vendasta.com</td><td>Blair</td><td>Anton</td><td>VMF</td></tr><tr><td>jbabiy@vendasta.com</td><td>Justin</td><td>Babiy</td><td>VMF</td></tr><tr><td>tbolin@vendasta.com</td><td>Taylor</td><td>Bolin</td><td>VMF</td></tr><tr><td>tbolin+vmf@vendasta.com</td><td>Taylor</td><td>Bolin (Inbound)</td><td>VMF</td></tr><tr><td>mbrennan@vendasta.com</td><td>Michael</td><td>Brennan</td><td>VMF</td></tr><tr><td>mbrown+vmf@vendasta.com</td><td>Mandi</td><td>Brown</td><td>VMF</td></tr><tr><td>jcook+vmf@vendasta.com</td><td>Jacqueline</td><td>Cook</td><td>VMF</td></tr><tr><td>jdavis@vendasta.com</td><td>Jeff</td><td>Davis</td><td>VMF</td></tr><tr><td>rdelaet@vendasta.com</td><td>Ryan</td><td>DeLaet</td><td>VMF</td></tr><tr><td>afitzgerald@vendasta.com</td><td>Adrian</td><td>Fitzgerald</td><td>VMF</td></tr><tr><td>mfolnovic@vendasta.com</td><td>Meghan</td><td>Folnovic</td><td>VMF</td></tr><tr><td>mgroden@vendasta.com</td><td>Michelle</td><td>Groden</td><td>VMF</td></tr><tr><td>rholaday@vendasta.com</td><td>Ryan</td><td>Holaday</td><td>VMF</td></tr><tr><td>rhomkar+testing@vendasta.com</td><td>Richa</td><td>Homkar</td><td>VMF</td></tr><tr><td>mkindrachuk@vendasta.com</td><td>Myron</td><td>Kindrachuk</td><td>VMF</td></tr><tr><td>ckwiatkowski@vendasta.com</td><td>Cheryl Anne</td><td>Kwiatkowski</td><td>VMF</td></tr><tr><td>nlabar@vendasta.com</td><td>Naresh</td><td>LaBar</td><td>VMF</td></tr><tr><td>tlawrence@vendasta.com</td><td>Tim</td><td>Lawrence</td><td>VMF</td></tr><tr><td>tlawrence+vmf@vendasta.com</td><td>Tim</td><td>Lawrence (Inbound)</td><td>VMF</td></tr><tr><td>gleith@vendasta.com</td><td>George</td><td>Leith</td><td>VMF</td></tr><tr><td>emcfaull@vendasta.com</td><td>Erin</td><td>McFaull</td><td>VMF</td></tr><tr><td>lmctavish@vendasta.com</td><td>Landon</td><td>McTavish</td><td>VMF</td></tr></table></div>\n",
+       "    <br />(rows: 56, time: 1.4s,   501KB processed, job: job_rYqlGKXTj39wdbOtxOpzBaIMdTs)<br />\n",
+       "    <script>\n",
+       "      require(['extensions/charting', 'element!4_146423277152', 'style!/static/extensions/charting.css'],\n",
+       "        function(charts, dom) {\n",
+       "          charts.render(dom,\n",
+       "            {\n",
+       "              chartStyle:\"paged_table\",\n",
+       "              dataName:\"3\",\n",
+       "              fields:\"email,first_name,last_name,pid\",\n",
+       "              totalRows:56,\n",
+       "              rowsPerPage:25,\n",
+       "            }, {}, {\"rows\": [{\"c\": [{\"v\": \"sabe@vendasta.com\"}, {\"v\": \"Seyi\"}, {\"v\": \"Abe\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"sabe+vmf@vendasta.com\"}, {\"v\": \"Seyi\"}, {\"v\": \"Abe (inbound)\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"sabeywickrama@vendasta.com\"}, {\"v\": \"Shakya\"}, {\"v\": \"Abeywickrama\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"BAnton@Vendasta.com\"}, {\"v\": \"Blair\"}, {\"v\": \"Anton\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"jbabiy@vendasta.com\"}, {\"v\": \"Justin\"}, {\"v\": \"Babiy\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"tbolin@vendasta.com\"}, {\"v\": \"Taylor\"}, {\"v\": \"Bolin\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"tbolin+vmf@vendasta.com\"}, {\"v\": \"Taylor\"}, {\"v\": \"Bolin (Inbound)\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"mbrennan@vendasta.com\"}, {\"v\": \"Michael\"}, {\"v\": \"Brennan\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"mbrown+vmf@vendasta.com\"}, {\"v\": \"Mandi\"}, {\"v\": \"Brown\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"jcook+vmf@vendasta.com\"}, {\"v\": \"Jacqueline\"}, {\"v\": \"Cook\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"jdavis@vendasta.com\"}, {\"v\": \"Jeff\"}, {\"v\": \"Davis\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"rdelaet@vendasta.com\"}, {\"v\": \"Ryan\"}, {\"v\": \"DeLaet\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"afitzgerald@vendasta.com\"}, {\"v\": \"Adrian\"}, {\"v\": \"Fitzgerald\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"mfolnovic@vendasta.com\"}, {\"v\": \"Meghan\"}, {\"v\": \"Folnovic\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"mgroden@vendasta.com\"}, {\"v\": \"Michelle\"}, {\"v\": \"Groden\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"rholaday@vendasta.com\"}, {\"v\": \"Ryan\"}, {\"v\": \"Holaday\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"rhomkar+testing@vendasta.com\"}, {\"v\": \"Richa\"}, {\"v\": \"Homkar\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"mkindrachuk@vendasta.com\"}, {\"v\": \"Myron\"}, {\"v\": \"Kindrachuk\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"ckwiatkowski@vendasta.com\"}, {\"v\": \"Cheryl Anne\"}, {\"v\": \"Kwiatkowski\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"nlabar@vendasta.com\"}, {\"v\": \"Naresh\"}, {\"v\": \"LaBar\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"tlawrence@vendasta.com\"}, {\"v\": \"Tim\"}, {\"v\": \"Lawrence\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"tlawrence+vmf@vendasta.com\"}, {\"v\": \"Tim\"}, {\"v\": \"Lawrence (Inbound)\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"gleith@vendasta.com\"}, {\"v\": \"George\"}, {\"v\": \"Leith\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"emcfaull@vendasta.com\"}, {\"v\": \"Erin\"}, {\"v\": \"McFaull\"}, {\"v\": \"VMF\"}]}, {\"c\": [{\"v\": \"lmctavish@vendasta.com\"}, {\"v\": \"Landon\"}, {\"v\": \"McTavish\"}, {\"v\": \"VMF\"}]}], \"cols\": [{\"type\": \"string\", \"id\": \"email\", \"label\": \"email\"}, {\"type\": \"string\", \"id\": \"first_name\", \"label\": \"first_name\"}, {\"type\": \"string\", \"id\": \"last_name\", \"label\": \"last_name\"}, {\"type\": \"string\", \"id\": \"pid\", \"label\": \"pid\"}]});\n",
+       "        }\n",
+       "      );\n",
+       "    </script>\n",
+       "  "
+      ],
+      "text/plain": [
+       "QueryResultsTable job_rYqlGKXTj39wdbOtxOpzBaIMdTs"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT email, first_name, last_name, pid\n",
+    "FROM [salestool-prod:datastore.SalesPerson]\n",
+    "WHERE pid = 'VMF'\n",
+    "ORDER BY last_name ASC"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### Order By"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
