--- a/Vendasta Analytics Workshop/2016-05-26/Examples.ipynb
+++ b/Vendasta Analytics Workshop/2016-05-26/Examples.ipynb
@@ -173,7 +173,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### JOIN"
+   ]
   },
   {
    "cell_type": "code",
@@ -182,7 +184,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%%sql\n",
+    "SELECT email, first_name, last_name, pid\n",
+    "FROM [salestool-prod:datastore.SalesPerson]\n",
+    "INNER JOIN [last_login_datetime]\n",
+    "WHERE pid = 'VMF'\n",
+    "ORDER BY last_name ASC"
+   ]
   }
  ],
  "metadata": {
