--- a/Vendasta Analytics Workshop/2016-05-26/Examples.ipynb
+++ b/Vendasta Analytics Workshop/2016-05-26/Examples.ipynb
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### JOIN"
+    "### JOINS"
    ]
   },
   {
@@ -187,8 +187,9 @@
    "source": [
     "%%sql\n",
     "SELECT email, first_name, last_name, pid\n",
-    "FROM [salestool-prod:datastore.SalesPerson]\n",
-    "INNER JOIN [last_login_datetime]\n",
+    "FROM [salestool-prod:datastore.SalesPerson] AS SalesPerson\n",
+    "INNER JOIN [salestool-prod:datastore.SalesPersonLoginRecord] AS SalesPersonLoginRecord\n",
+    "ON SalesPersonLoginRecord.sales_person_id = SalesPerson.sales\n",
     "WHERE pid = 'VMF'\n",
     "ORDER BY last_name ASC"
    ]
