--- a/Vendasta Analytics Workshop/2016-05-26/Examples.ipynb
+++ b/Vendasta Analytics Workshop/2016-05-26/Examples.ipynb
@@ -179,20 +179,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div class=\"bqtv\" id=\"6_146423309989\"><table><tr><th>email</th><th>first_name</th><th>last_name</th><th>pid</th><th>last_login_datetime</th></tr><tr><td>gleith@vendasta.com</td><td>George</td><td>Leith</td><td>VMF</td><td>2016-05-25 01:00:23.483380</td></tr><tr><td>sputnam@vendasta.com</td><td>Shannon</td><td>Putnam</td><td>VMF</td><td>2016-05-24 23:53:47.796190</td></tr><tr><td>rdelaet@vendasta.com</td><td>Ryan</td><td>DeLaet</td><td>VMF</td><td>2016-05-24 23:51:22.626280</td></tr><tr><td>tlawrence@vendasta.com</td><td>Tim</td><td>Lawrence</td><td>VMF</td><td>2016-05-24 23:28:23.143240</td></tr><tr><td>lwillms@vendasta.com</td><td>Lorie</td><td>Willms</td><td>VMF</td><td>2016-05-24 22:55:19.660830</td></tr><tr><td>tseto@vendasta.com</td><td>Thomas</td><td>Seto</td><td>VMF</td><td>2016-05-24 22:54:25.622150</td></tr><tr><td>gtebbutt@vendasta.com</td><td>Gillian</td><td>Tebbutt</td><td>VMF</td><td>2016-05-24 22:40:23.385470</td></tr><tr><td>jcook+vmf@vendasta.com</td><td>Jacqueline</td><td>Cook</td><td>VMF</td><td>2016-05-24 22:33:23.853000</td></tr><tr><td>tlawrence+vmf@vendasta.com</td><td>Tim</td><td>Lawrence (Inbound)</td><td>VMF</td><td>2016-05-24 22:20:16.756780</td></tr><tr><td>lmctavish@vendasta.com</td><td>Landon</td><td>McTavish</td><td>VMF</td><td>2016-05-24 21:53:10.365350</td></tr><tr><td>troberts@vendasta.com</td><td>Todd</td><td>Roberts</td><td>VMF</td><td>2016-05-24 21:52:17.077830</td></tr><tr><td>rseaward1@vendasta.com</td><td>Richie</td><td>Rich</td><td>VMF</td><td>2016-05-24 21:49:10.770470</td></tr><tr><td>cstark+vmf@vendasta.com</td><td>Cameron</td><td>Stark (inbound)</td><td>VMF</td><td>2016-05-24 21:29:55.169610</td></tr><tr><td>cstark+brands@vendasta.com</td><td>Cam</td><td>Stark</td><td>VMF</td><td>2016-05-24 21:25:06.644030</td></tr><tr><td>jyeomans@vendasta.com</td><td>Janessa</td><td>Yeomans</td><td>VMF</td><td>2016-05-24 21:19:05.268070</td></tr><tr><td>mpatola+vmf@vendasta.com</td><td>Michael</td><td>Patola (inbound)</td><td>VMF</td><td>2016-05-24 21:12:02.406630</td></tr><tr><td>mpatola@vendasta.com</td><td>Michael</td><td>Patola</td><td>VMF</td><td>2016-05-24 20:26:17.325800</td></tr><tr><td>sabe@vendasta.com</td><td>Seyi</td><td>Abe</td><td>VMF</td><td>2016-05-24 20:23:54.261370</td></tr><tr><td>ckwiatkowski@vendasta.com</td><td>Cheryl Anne</td><td>Kwiatkowski</td><td>VMF</td><td>2016-05-24 19:24:03.863690</td></tr><tr><td>rholaday@vendasta.com</td><td>Ryan</td><td>Holaday</td><td>VMF</td><td>2016-05-24 19:17:44.216040</td></tr><tr><td>jbabiy@vendasta.com</td><td>Justin</td><td>Babiy</td><td>VMF</td><td>2016-05-24 18:37:57.855550</td></tr><tr><td>cunsworth@vendasta.com</td><td>Chris</td><td>Unsworth</td><td>VMF</td><td>2016-05-24 17:46:41.031540</td></tr><tr><td>nlabar@vendasta.com</td><td>Naresh</td><td>LaBar</td><td>VMF</td><td>2016-05-24 17:32:53.423370</td></tr><tr><td>ctaylor+vmf@vendasta.com</td><td>Craig</td><td>Taylor (BDR)</td><td>VMF</td><td>2016-05-24 16:51:51.297150</td></tr><tr><td>rafaelpavlovic@vendasta.com</td><td>Raf</td><td>Pavlovic</td><td>VMF</td><td>2016-05-24 16:35:39.631150</td></tr></table></div>\n",
+       "    <br />(rows: 53, time: 1.0s,   817KB processed, job: job_cPpb2ttjgtxwmcspwlaPadRquJw)<br />\n",
+       "    <script>\n",
+       "      require(['extensions/charting', 'element!6_146423309989', 'style!/static/extensions/charting.css'],\n",
+       "        function(charts, dom) {\n",
+       "          charts.render(dom,\n",
+       "            {\n",
+       "              chartStyle:\"paged_table\",\n",
+       "              dataName:\"5\",\n",
+       "              fields:\"email,first_name,last_name,pid,last_login_datetime\",\n",
+       "              totalRows:53,\n",
+       "              rowsPerPage:25,\n",
+       "            }, {}, {\"rows\": [{\"c\": [{\"v\": \"gleith@vendasta.com\"}, {\"v\": \"George\"}, {\"v\": \"Leith\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-25T01:00:23.483380\"}]}, {\"c\": [{\"v\": \"sputnam@vendasta.com\"}, {\"v\": \"Shannon\"}, {\"v\": \"Putnam\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T23:53:47.796190\"}]}, {\"c\": [{\"v\": \"rdelaet@vendasta.com\"}, {\"v\": \"Ryan\"}, {\"v\": \"DeLaet\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T23:51:22.626280\"}]}, {\"c\": [{\"v\": \"tlawrence@vendasta.com\"}, {\"v\": \"Tim\"}, {\"v\": \"Lawrence\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T23:28:23.143240\"}]}, {\"c\": [{\"v\": \"lwillms@vendasta.com\"}, {\"v\": \"Lorie\"}, {\"v\": \"Willms\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T22:55:19.660830\"}]}, {\"c\": [{\"v\": \"tseto@vendasta.com\"}, {\"v\": \"Thomas\"}, {\"v\": \"Seto\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T22:54:25.622150\"}]}, {\"c\": [{\"v\": \"gtebbutt@vendasta.com\"}, {\"v\": \"Gillian\"}, {\"v\": \"Tebbutt\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T22:40:23.385470\"}]}, {\"c\": [{\"v\": \"jcook+vmf@vendasta.com\"}, {\"v\": \"Jacqueline\"}, {\"v\": \"Cook\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T22:33:23.853000\"}]}, {\"c\": [{\"v\": \"tlawrence+vmf@vendasta.com\"}, {\"v\": \"Tim\"}, {\"v\": \"Lawrence (Inbound)\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T22:20:16.756780\"}]}, {\"c\": [{\"v\": \"lmctavish@vendasta.com\"}, {\"v\": \"Landon\"}, {\"v\": \"McTavish\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T21:53:10.365350\"}]}, {\"c\": [{\"v\": \"troberts@vendasta.com\"}, {\"v\": \"Todd\"}, {\"v\": \"Roberts\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T21:52:17.077830\"}]}, {\"c\": [{\"v\": \"rseaward1@vendasta.com\"}, {\"v\": \"Richie\"}, {\"v\": \"Rich\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T21:49:10.770470\"}]}, {\"c\": [{\"v\": \"cstark+vmf@vendasta.com\"}, {\"v\": \"Cameron\"}, {\"v\": \"Stark (inbound)\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T21:29:55.169610\"}]}, {\"c\": [{\"v\": \"cstark+brands@vendasta.com\"}, {\"v\": \"Cam\"}, {\"v\": \"Stark\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T21:25:06.644030\"}]}, {\"c\": [{\"v\": \"jyeomans@vendasta.com\"}, {\"v\": \"Janessa\"}, {\"v\": \"Yeomans\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T21:19:05.268070\"}]}, {\"c\": [{\"v\": \"mpatola+vmf@vendasta.com\"}, {\"v\": \"Michael\"}, {\"v\": \"Patola (inbound)\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T21:12:02.406630\"}]}, {\"c\": [{\"v\": \"mpatola@vendasta.com\"}, {\"v\": \"Michael\"}, {\"v\": \"Patola\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T20:26:17.325800\"}]}, {\"c\": [{\"v\": \"sabe@vendasta.com\"}, {\"v\": \"Seyi\"}, {\"v\": \"Abe\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T20:23:54.261370\"}]}, {\"c\": [{\"v\": \"ckwiatkowski@vendasta.com\"}, {\"v\": \"Cheryl Anne\"}, {\"v\": \"Kwiatkowski\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T19:24:03.863690\"}]}, {\"c\": [{\"v\": \"rholaday@vendasta.com\"}, {\"v\": \"Ryan\"}, {\"v\": \"Holaday\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T19:17:44.216040\"}]}, {\"c\": [{\"v\": \"jbabiy@vendasta.com\"}, {\"v\": \"Justin\"}, {\"v\": \"Babiy\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T18:37:57.855550\"}]}, {\"c\": [{\"v\": \"cunsworth@vendasta.com\"}, {\"v\": \"Chris\"}, {\"v\": \"Unsworth\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T17:46:41.031540\"}]}, {\"c\": [{\"v\": \"nlabar@vendasta.com\"}, {\"v\": \"Naresh\"}, {\"v\": \"LaBar\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T17:32:53.423370\"}]}, {\"c\": [{\"v\": \"ctaylor+vmf@vendasta.com\"}, {\"v\": \"Craig\"}, {\"v\": \"Taylor (BDR)\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T16:51:51.297150\"}]}, {\"c\": [{\"v\": \"rafaelpavlovic@vendasta.com\"}, {\"v\": \"Raf\"}, {\"v\": \"Pavlovic\"}, {\"v\": \"VMF\"}, {\"v\": \"2016-05-24T16:35:39.631150\"}]}], \"cols\": [{\"type\": \"string\", \"id\": \"email\", \"label\": \"email\"}, {\"type\": \"string\", \"id\": \"first_name\", \"label\": \"first_name\"}, {\"type\": \"string\", \"id\": \"last_name\", \"label\": \"last_name\"}, {\"type\": \"string\", \"id\": \"pid\", \"label\": \"pid\"}, {\"type\": \"datetime\", \"id\": \"last_login_datetime\", \"label\": \"last_login_datetime\"}]});\n",
+       "        }\n",
+       "      );\n",
+       "    </script>\n",
+       "  "
+      ],
+      "text/plain": [
+       "QueryResultsTable job_cPpb2ttjgtxwmcspwlaPadRquJw"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT email, first_name, last_name, pid, last_login_datetime\n",
+    "FROM [salestool-prod:datastore.SalesPerson] AS SalesPerson\n",
+    "INNER JOIN [salestool-prod:datastore.SalesPersonLoginRecord] AS SalesPersonLoginRecord\n",
+    "ON SalesPersonLoginRecord.sales_person_id = SalesPerson.sales_person_id\n",
+    "WHERE pid = 'VMF'\n",
+    "ORDER BY last_login_datetime DESC"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SELECT email, first_name, last_name, pid\n",
-    "FROM [salestool-prod:datastore.SalesPerson] AS SalesPerson\n",
-    "INNER JOIN [salestool-prod:datastore.SalesPersonLoginRecord] AS SalesPersonLoginRecord\n",
-    "ON SalesPersonLoginRecord.sales_person_id = SalesPerson.sales\n",
-    "WHERE pid = 'VMF'\n",
-    "ORDER BY last_name ASC"
-   ]
+   "source": []
   }
  ],
  "metadata": {
